# rsolr

./: Cargo.toml  README.md  solr_build_provision.sh  solr_provision.sh
.github/workflows/: entrypoint.sh  rust.yml
src/: client.rs  command.rs  cursor.rs  date.rs  error.rs  facet_fields.rs  http_client.rs  lib.rs  params.rs  query.rs  range.rs  solr_response.rs  solr_result.rs  term.rs
tests/: client_integration_test.rs  client_test.rs  test.csv
