[package]
name = "rsolr"
version = "0.3.0"
edition = "2021"
authors = ["Gyorgy Jerovetz <jerovetz@comlions.net>"]
description = "A Solr client for Rust."
license = "MIT"
repository = "https://github.com/jerovetz/rsolr/"
readme = "README.md"
keywords = ["solr"]
categories = ["web-programming::http-client", "database"]
exclude = [".github/workflows/rust.yml"]

[dependencies]
http = "0.2.9"
mockall_double = "0.3.0"
regex = "1.9.5"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.95", features = ["raw_value"] }
url = "2.3.1"

[dev-dependencies]
mockall = "0.11.4"

[package.metadata.scripts]
solr-start = "docker run -d --rm -e SOLR_ENABLE_STREAM_BODY=true --name rsc_solr -v solrdata:/var/solr -p 8983:8983 solr:latest"
solr-stop = "docker stop rsc_solr"
solr-provision = "./solr_provision.sh"
